java 9 modules support example

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 
 .idea/
 JAVA-8-9-10-11-12-13-14-15-16-17.iml
+src/JAVA9/consumer/consumer.iml
+src/JAVA9/producer/producer.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
